team-app/main/default/objects/Opportunity/fields/Action_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Action_Bucket__c</fullName>
    <description>This Week ranking bucket written by Job A. Focus membership is also selected at query time.</description>
    <inlineHelpText>Exactly one of Focus, DueThisWeek, DecideOrKill, FixFirst, None.</inlineHelpText>
    <label>Action Bucket</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Focus</fullName>
                <default>true</default>
                <label>Focus</label>
            </value>
            <value>
                <fullName>DueThisWeek</fullName>
            </value>
            <value>
                <fullName>DecideOrKill</fullName>
            </value>
            <value>
                <fullName>FixFirst</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>