team-app/main/default/objects/Opportunity/fields/Action_Priority__c.field-meta.xml
<CustomField>
    <fullName>Action_Priority__c</fullName>
    <description>Stored This Week action priority written by Job A. Cap-friendly integer.</description>
    <inlineHelpText>This Week priority 0-100. Today mode is computed at query time.</inlineHelpText>
    <label>Action Priority</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>