team-app/main/default/objects/Opportunity/fields/Action_Priority_Reason__c.field-meta.xml
<CustomField>
    <fullName>Action_Priority_Reason__c</fullName>
    <description>Deterministic explainability for Action_Priority__c. Never AI-generated.</description>
    <inlineHelpText>Two highest-contributing scoring components in plain language.</inlineHelpText>
    <label>Action Priority Reason</label>
    <type>Text</type>
    <length>255</length>
</CustomField>