team-app/main/default/objects/Opportunity/fields/Cockpit_Class_Override__c.field-meta.xml
<CustomField>
    <fullName>Cockpit_Class_Override__c</fullName>
    <label>Cockpit Class Override</label>
    <description>Forecasting Hub: the director's persisted classification override (Include-High/Med/Exclude) that supersedes the rule-engine class. Written by CockpitForecastController.setOverride.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>HI</fullName><label>Include - High</label><default>false</default></value>
            <value><fullName>MD</fullName><label>Include - Med</label><default>false</default></value>
            <value><fullName>EX</fullName><label>Exclude</label><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>