team-app/main/default/objects/Opportunity/fields/Cockpit_In_Call__c.field-meta.xml
<CustomField>
    <fullName>Cockpit_In_Call__c</fullName>
    <label>Cockpit In Call</label>
    <description>Forecasting Hub: the director's persisted "in my call" pick for this opportunity. Written by the Forecasting Hub LWC via CockpitForecastController.setInCall.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>