team-app/main/default/objects/Opportunity/fields/Cockpit_Override_Note__c.field-meta.xml
<CustomField>
    <fullName>Cockpit_Override_Note__c</fullName>
    <label>Cockpit Override Note</label>
    <description>Forecasting Hub: the rationale the director records when overriding an opportunity's classification. Written by CockpitForecastController.setOverride.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>