team-app/main/default/objects/Opportunity/fields/Date_Conflict__c.field-meta.xml
<CustomField>
    <fullName>Date_Conflict__c</fullName>
    <description>True when Next_Step_Date_bf__c is after CloseDate.</description>
    <inlineHelpText>Next step date is after Close Date. Warn, do not block.</inlineHelpText>
    <label>Date Conflict</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>