team-app/main/default/objects/Opportunity/fields/Director_Note_Updated_On__c.field-meta.xml
<CustomField>
    <fullName>Director_Note_Updated_On__c</fullName>
    <description>Date of the last Director_Notes_bf__c write. Required because long text cannot be filtered.</description>
    <inlineHelpText>Date stamped on every director-note write. Filter this; the note body cannot be filtered in SOQL.</inlineHelpText>
    <label>Director Note Updated On</label>
    <type>Date</type>
</CustomField>