team-app/main/default/objects/Opportunity/fields/Forecast_Mismatch__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Mismatch__c</fullName>
    <description>Four-way mismatch flag across ForecastCategoryName, Director, Roll-up, and Recommended.</description>
    <inlineHelpText>AE, director, roll-up, and recommended forecast disagree.</inlineHelpText>
    <label>Forecast Mismatch</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>