team-app/main/default/objects/Opportunity/fields/Freshest_Activity_Age__c.field-meta.xml
<CustomField>
    <fullName>Freshest_Activity_Age__c</fullName>
    <description>Age in days of the freshest motion signal used by grading and priority.</description>
    <inlineHelpText>Days since the newest of history, director note, or LastActivityDate.</inlineHelpText>
    <label>Freshest Activity Age (Days)</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>