team-app/main/default/objects/Opportunity/fields/Grade_Computed_On__c.field-meta.xml
<CustomField>
    <fullName>Grade_Computed_On__c</fullName>
    <description>Timestamp of the last Pipeline Review grade write for this opportunity.</description>
    <inlineHelpText>When Job A or the Opportunity trigger last wrote grade fields.</inlineHelpText>
    <label>Grade Computed On</label>
    <type>DateTime</type>
</CustomField>