team-app/main/default/objects/Opportunity/fields/Grade_Input_Hash__c.field-meta.xml
<CustomField>
    <fullName>Grade_Input_Hash__c</fullName>
    <description>SHA-like hash of Stage, CloseDate, forecast, next step, activity, newest history, ARR.</description>
    <inlineHelpText>Hash of the inputs used for the last grade and note. Job B skips when unchanged.</inlineHelpText>
    <label>Grade Input Hash</label>
    <type>Text</type>
    <length>64</length>
</CustomField>