team-app/main/default/objects/Opportunity/fields/Grade_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Grade_Rationale__c</fullName>
    <description>Human-readable rationale for Recommended_Forecast__c. Always names the trigger.</description>
    <inlineHelpText>One-line trigger that produced the recommended forecast.</inlineHelpText>
    <label>Grade Rationale</label>
    <type>Text</type>
    <length>255</length>
</CustomField>