team-app/main/default/objects/Opportunity/fields/Next_Step_Source__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Source__c</fullName>
    <description>Who wrote Next_Step_bf__c: Rep, Rep-accepted-AI, AI-auto, or Director.</description>
    <inlineHelpText>Provenance of the live next step. AI-authored values are never indistinguishable from rep text.</inlineHelpText>
    <label>Next Step Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rep</fullName>
                <default>true</default>
                <label>Rep</label>
            </value>
            <value>
                <fullName>Rep-accepted-AI</fullName>
            </value>
            <value>
                <fullName>AI-auto</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>