team-app/main/default/objects/Opportunity/fields/Next_Step_State__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_State__c</fullName>
    <description>Derived next-step health used by Pipeline Review filters and This Week ranking.</description>
    <inlineHelpText>Missing, past due, parked, or healthy.</inlineHelpText>
    <label>Next Step State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Missing</fullName>
                <default>true</default>
                <label>Missing</label>
            </value>
            <value>
                <fullName>PastDue</fullName>
            </value>
            <value>
                <fullName>Parked</fullName>
            </value>
            <value>
                <fullName>Healthy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>