team-app/main/default/objects/Opportunity/fields/Parked_Cycles__c.field-meta.xml
<CustomField>
    <fullName>Parked_Cycles__c</fullName>
    <description>Count of consecutive similar next-step history entries. Written by the grading job.</description>
    <inlineHelpText>Consecutive next-step restatements (Jaccard >= 0.6). Two or more means parked.</inlineHelpText>
    <label>Parked Cycles</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>