team-app/main/default/objects/Opportunity/fields/Pipeline_Grade__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Grade__c</fullName>
    <description>Deterministic pipeline grade written by PipelineReviewGradeService. Filterable and reportable.</description>
    <inlineHelpText>Stored A/B/C/D grade from the Pipeline Review job. Not evaluated on read.</inlineHelpText>
    <label>Pipeline Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <default>true</default>
                <label>A</label>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>