team-app/main/default/objects/Opportunity/fields/Pricing_Review_Override__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Review_Override__c</fullName>
    <label>Pricing Review Override</label>
    <description>Sales Tools &gt; Pricing Review View Checklist Tool: manual override of the pricing-review completion status. Blank = derive from whether answers exist; "Done"/"Not Done" force the status. Written by PricingReviewController.setReviewStatus.</description>
    <inlineHelpText>Force the pricing-review status shown on the tool and dashboard. Leave blank to derive it automatically from whether a review has been completed.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>Not Done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>