team-app/main/default/objects/Opportunity/fields/Priority_Computed_On__c.field-meta.xml
<CustomField>
    <fullName>Priority_Computed_On__c</fullName>
    <description>Timestamp of the last Pipeline Review priority write.</description>
    <inlineHelpText>When action priority and bucket were last written.</inlineHelpText>
    <label>Priority Computed On</label>
    <type>DateTime</type>
</CustomField>