team-app/main/default/objects/Opportunity/fields/Recommended_Contact__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Contact__c</fullName>
    <description>Contact to call this week. Null when nobody is attached (Fix First).</description>
    <inlineHelpText>Highest-scoring attached contact. Prefers whoever last replied over IsPrimary.</inlineHelpText>
    <label>Recommended Contact</label>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Recommended Contact</relationshipLabel>
    <relationshipName>Pipeline_Recommended_Opps</relationshipName>
</CustomField>