team-app/main/default/objects/Opportunity/fields/Recommended_Contact_Reason__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Contact_Reason__c</fullName>
    <description>Plain-language reason for Recommended_Contact__c.</description>
    <inlineHelpText>Why this contact won: reply recency, primary, title.</inlineHelpText>
    <label>Recommended Contact Reason</label>
    <type>Text</type>
    <length>255</length>
</CustomField>