team-app/main/default/objects/Opportunity/fields/Recommended_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Forecast__c</fullName>
    <description>Recommended forecast from Pipeline Review rules. One of Commit / Most Likely / Best Case / Pipeline / Omitted.</description>
    <inlineHelpText>Deterministic recommended forecast category from the grading engine.</inlineHelpText>
    <label>Recommended Forecast</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commit</fullName>
                <default>true</default>
                <label>Commit</label>
            </value>
            <value>
                <fullName>Most Likely</fullName>
            </value>
            <value>
                <fullName>Best Case</fullName>
            </value>
            <value>
                <fullName>Pipeline</fullName>
            </value>
            <value>
                <fullName>Omitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>