team-app/main/default/objects/Opportunity/fields/Suggested_Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Next_Step__c</fullName>
    <description>Job C next-step suggestion. Hygiene digest is unchanged because the real field is not written.</description>
    <inlineHelpText>AI suggestion only. Does not overwrite Next_Step_bf__c until accepted.</inlineHelpText>
    <label>Suggested Next Step</label>
    <type>Text</type>
    <length>255</length>
</CustomField>