team-app/main/default/objects/Opportunity/fields/Suggestion_Generated_On__c.field-meta.xml
<CustomField>
    <fullName>Suggestion_Generated_On__c</fullName>
    <description>Timestamp of the last next-step suggestion write.</description>
    <inlineHelpText>When Job C last wrote a next-step suggestion.</inlineHelpText>
    <label>Suggestion Generated On</label>
    <type>DateTime</type>
</CustomField>