team-app/main/default/objects/Opportunity/fields/Suggestion_Status__c.field-meta.xml
<CustomField>
    <fullName>Suggestion_Status__c</fullName>
    <description>Lifecycle of the AI next-step suggestion. Default is suggest-and-accept (tier 1).</description>
    <inlineHelpText>Pending until the rep accepts or ignores.</inlineHelpText>
    <label>Suggestion Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Ignored</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>