team-app/main/default/objects/Opportunity/fields/Suggestions_Ignored_Count__c.field-meta.xml
<CustomField>
    <fullName>Suggestions_Ignored_Count__c</fullName>
    <description>Escalation counter for ignored AI next-step suggestions.</description>
    <inlineHelpText>How many suggestions the rep left pending past the nag window.</inlineHelpText>
    <label>Suggestions Ignored Count</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>